--- a/panel.html
+++ b/panel.html
@@ -42,14 +42,24 @@
           <span class="fas fa-plus-square"></span>
         </div>  
       </a>
+      <a class="navbar-brand" href="administrar.html">
+        <div data-toggle="tooltip" data-placement="bottom" title="Administrar">
+          <span class="fas fa-puzzle-piece"></span>
+        </div>  
+      </a>
       <a class="navbar-brand" href="ofertas.html">
-        <div data-toggle="tooltip" data-placement="bottom" title="Estadísticas">
+        <div data-toggle="tooltip" data-placement="bottom" title="Ofertas">
           <span class="fas fa-percent"></span>
         </div>
       </a>
       <a class="navbar-brand" href="estadisticas.html">
         <div data-toggle="tooltip" data-placement="bottom" title="Estadísticas">
           <span class="fas fa-chart-line"></span>
+        </div>
+      </a>
+      <a class="navbar-brand" href="pedidosMateriales.html">
+        <div data-toggle="tooltip" data-placement="bottom" title="Pedidos de materiales">
+          <span class="fas fa-box-open"></span>
         </div>
       </a>
       <div id="campana" onclick="mostrarNotificaciones()" class="navbar-brand dropdown" data-toggle="tooltip" data-placement="bottom" title="Notificaciones">
