--- a/administrar.html
+++ b/administrar.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link href='logo.ico' rel='shortcut icon' type='image/x-icon' />
-    <title>Tiendas</title>
+    <title>Área de administración</title>
     <link rel="stylesheet" type="text/css" href="css/jquery-ui.css">
     <link rel="stylesheet" href="css/bootstrap4.min.css">
     <!-- <link rel="stylesheet" href="css/bootstrap-theme.min.css"> -->
@@ -77,7 +77,7 @@
   <div id="app" class="container-fluid">
     <div class="row mt-4">
       <div class="col-lg-12 col-md-12 col-sm-12">
-        <h4 class="display-5">Tiendas</h4>
+        <h4 class="display-5">Área de administración</h4>
       </div>
     </div>
     <div class="row">
@@ -85,13 +85,14 @@
         <div class="card">
           <div class="card-body">
             <div class="row">
-              <!-- <div class="col-lg-2 col-md-3 col-sm-6">
+              <div class="col-lg-2 col-md-3 col-sm-6">
                 <a href="tiendas.html" class="enlace-admin">
                   <div class="card tarjeta">
-                    <img class="card-img-top" height="150px" src="img/tiendas/soriana.png" alt="Card image cap">
+                    <img class="card-img-top" height="150px" src="img/tiendas.jpg" alt="Card image cap">
                     <div class="card-body">
-                      <h5 class="card-title">Soriana</h5>
-                      
+                      <h5 class="card-title">Tiendas</h5>
+                      <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="#" class="btn btn-primary">Go somewhere</a> -->
                     </div>
                   </div>
                 </a>
@@ -99,53 +100,14 @@
               <div class="col-lg-2 col-md-3 col-sm-6">
                 <a href="productos.html" class="enlace-admin">
                   <div class="card tarjeta tarjeta">
-                    <img class="card-img-top" height="150px" style="border-bottom: solid 1px rgb(0, 0,0, .125);" src="img/tiendas/grand.png" alt="Card image cap">
+                    <img class="card-img-top" height="150px" style="border-bottom: solid 1px rgb(0, 0,0, .125);" src="img/productos.png" alt="Card image cap">
                     <div class="card-body">
-                      <h5 class="card-title">Grande</h5>
-                      
+                      <h5 class="card-title">Productos</h5>
+                      <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="#" class="btn btn-primary">Go somewhere</a> -->
                     </div>
                   </div>
                 </a>
-              </div> -->
-              <div class="col-md-4">
-                <div class="card">
-                  <div class="card-body">
-                    <form>
-                      <div class="form-group">
-                        <label for="region">Región:</label>
-                        <select name="region" id="region" class="form-control"></select>
-                      </div>
-                      <div class="form-group">
-                        <label for="clave">Clave:</label>
-                        <input type="text" class="form-control" id="clave">
-                      </div>
-                      <div class="form-group form-check">
-                        <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                        <label class="form-check-label" for="exampleCheck1">Check me out</label>
-                      </div>
-                      <button type="submit" class="btn btn-primary">Submit</button>
-                    </form>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="row mt-3">
-              <div class="col-md-12">
-                <table class="table table-condensed table-hover table-sm table-striped">
-                  <thead>
-                    <tr>
-                      <th>Clave</th>
-                      <th>Región</th>
-                      <th>Ciudad</th>
-                      <th>Consorcio</th>
-                      <th>Nombre</th>
-                      <th>Detalles</th>
-                    </tr>
-                  </thead>
-                  <tbody>
-
-                  </tbody>
-                </table>
               </div>
             </div>
           </div>
