--- a/oferta.html
+++ b/oferta.html
@@ -17,7 +17,7 @@
     <link href="css/panel.css" rel="stylesheet">
     <!-- <link href="vendor/morrisjs/morris.css" rel="stylesheet"> -->
     <link rel="stylesheet" href="css/icon.css">
-    <link rel="stylesheet" href="dist/css/bootstrap-select.css">
+    <link rel="stylesheet" href="css/bootstrap-select.min.css">
     <link rel="stylesheet" href="css/bootstrap-datepicker.min.css">
     <link rel="stylesheet" href="css/bootstrap-datepicker3.min.css">
     <link rel="stylesheet" href="css/bootstrap-datepicker3.standalone.css">
@@ -98,16 +98,18 @@
           <div class="card-body">
             <h5 class="card-title">Clave: <span id="clave" class="text-muted"></span></h5>
             <p class="card-text">Consorcio <span id="consorcio" class="text-muted"></span></p>
-            <p class="card-text">Tienda: <span id="tienda" class="text-muted"></span></p>
-            <table id="productos" class="table table-bordered table-striped table-sm table-hover">
+            <p class="card-text">Tiendas: <span id="tiendas" class="text-muted"></span></p>
+            <table id="productos"  cellspacing="0" width="100%" class="table table-bordered table-striped table-sm table-hover">
               <thead>
                 <tr>
                   <th>Clave</th>
                   <th>Nombre</th>
                   <th>Precio lista</th>
                   <th>Precio oferta</th>
-                  <th>Fecha inicio</th>
-                  <th>Fecha fin</th>
+                  <!-- <th>Fecha inicio</th>
+                  <th>Fecha fin</th> -->
+                  <th class="text-center">Editar</th>
+                  <th class="text-center">Eliminar</th>
                 </tr>
               </thead>
               <tbody>
@@ -119,6 +121,62 @@
       </div>
     </div>
   </div>
+  <div id="modalEditarProducto" class="modal" tabindex="-1" role="dialog">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Editar producto</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <form>
+            <div class="form-group row">
+              <label for="claveProducto" class="col-sm-4 col-form-label text-right">Clave:</label>
+              <div class="col-sm-8">
+                <input type="text" class="form-control" id="claveProducto" readonly>
+              </div>
+            </div>
+            <div class="form-group row">
+              <label for="nombreProducto" class="col-sm-4 col-form-label text-right">Nombre:</label>
+              <div class="col-sm-8">
+                <input type="text" class="form-control" id="nombreProducto" readonly>
+              </div>
+            </div>
+            <div class="form-group row">
+              <label for="precioLista" class="col-sm-4 col-form-label text-right">Precio lista:</label>
+              <div class="col-sm-8">
+                <input type="number" class="form-control" id="precioLista" readonly>
+              </div>
+            </div>
+            <div class="form-group row">
+              <label for="precioOferta" class="col-sm-4 col-form-label text-right">Precio oferta:</label>
+              <div class="col-sm-8">
+                <input type="number" class="form-control" id="precioOferta">
+              </div>
+            </div>
+            <!-- <div class="form-group row">
+              <label for="fechaInicio" class="col-sm-4 col-form-label text-right">Fecha inicio:</label>
+              <div class="col-sm-8">
+                <input type="date" class="form-control" id="fechaInicio">
+              </div>
+            </div>
+            <div class="form-group row">
+              <label for="fechaFin" class="col-sm-4 col-form-label text-right">Fecha fin:</label>
+              <div class="col-sm-8">
+                <input type="date" class="form-control" id="fechaFin">
+              </div>
+            </div> -->
+          </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+          <button id="btnEditar" type="button" class="btn btn-primary">Guardar</button>
+        </div>
+      </div>
+    </div>
+  </div>
   <!-- <script src="js/jquery-3.2.1.min.js"></script> -->
   <!-- <script>window.$ = window.jQuery = require('./js/jquery-3.2.1.min.js')</script> -->
   <script>if (typeof module === 'object') {window.module = module; module = undefined;}</script>
@@ -126,7 +184,7 @@
   <script>if (window.module) module = window.module;</script>
   <script src="js/popper.min.js"></script>
   <script src="js/bootstrap4.min.js"></script>
-  <script src="dist/js/bootstrap-select.js"></script>
+  <script src="js/bootstrap-select.min.js"></script>
   <script src="vendor/metisMenu/metisMenu.min.js"></script>
   <script src="js/jquery.dataTables.min.js"></script>
   <script src="js/dataTables.bootstrap4.min.js"></script>
