--- a/pedidosMateriales.html
+++ b/pedidosMateriales.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link href='logo.ico' rel='shortcut icon' type='image/x-icon' />
-    <title>Tiendas</title>
+    <title>Ofertas</title>
     <link rel="stylesheet" type="text/css" href="css/jquery-ui.css">
     <link rel="stylesheet" href="css/bootstrap4.min.css">
     <!-- <link rel="stylesheet" href="css/bootstrap-theme.min.css"> -->
@@ -77,69 +77,61 @@
   <div id="app" class="container-fluid">
     <div class="row mt-4">
       <div class="col-lg-12 col-md-12 col-sm-12">
-        <h4 class="display-5">Tiendas</h4>
+        <h4 class="display-5">Pedidos de materiales</h4>
       </div>
     </div>
-    <div class="row">
-      <div class="col-md-12">
-        <div class="card">
-          <div class="card-body">
-            <div class="row">
-              <!-- <div class="col-lg-2 col-md-3 col-sm-6">
-                <a href="tiendas.html" class="enlace-admin">
-                  <div class="card tarjeta">
-                    <img class="card-img-top" height="150px" src="img/tiendas/soriana.png" alt="Card image cap">
-                    <div class="card-body">
-                      <h5 class="card-title">Soriana</h5>
-                      
-                    </div>
-                  </div>
-                </a>
-              </div>
-              <div class="col-lg-2 col-md-3 col-sm-6">
-                <a href="productos.html" class="enlace-admin">
-                  <div class="card tarjeta tarjeta">
-                    <img class="card-img-top" height="150px" style="border-bottom: solid 1px rgb(0, 0,0, .125);" src="img/tiendas/grand.png" alt="Card image cap">
-                    <div class="card-body">
-                      <h5 class="card-title">Grande</h5>
-                      
-                    </div>
-                  </div>
-                </a>
-              </div> -->
-              <div class="col-md-4">
-                <div class="card">
-                  <div class="card-body">
-                    <form>
-                      <div class="form-group">
-                        <label for="region">Región:</label>
-                        <select name="region" id="region" class="form-control"></select>
-                      </div>
-                      <div class="form-group">
-                        <label for="clave">Clave:</label>
-                        <input type="text" class="form-control" id="clave">
-                      </div>
-                      <div class="form-group form-check">
-                        <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                        <label class="form-check-label" for="exampleCheck1">Check me out</label>
-                      </div>
-                      <button type="submit" class="btn btn-primary">Submit</button>
-                    </form>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="row mt-3">
-              <div class="col-md-12">
-                <table class="table table-condensed table-hover table-sm table-striped">
+    <ul class="nav nav-tabs" role="tablist">
+      <li class="nav-item">
+        <a class="nav-link active" id="pedidosRecibidos-tab" data-toggle="tab" href="#pedidosRecibidos" role="tab" aria-controls="pedidosRecibidos" aria-selected="true">Recibidos</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" id="pedidosEntregados-tab" data-toggle="tab" href="#pedidosEntregados" role="tab" aria-controls="pedidosEntregados" aria-selected="false">Entregados</a>
+      </li>
+    </ul>
+    <div class="tab-content">
+      <div class="tab-pane fade show active" id="pedidosRecibidos" role="tabpanel" aria-labelledby="pedidosRecibidos">
+        <div class="row">
+          <div class="col-md-12">
+            <div class="card">
+              <div class="card-body">
+                <table id="tablaPedidosRecibidos" cellspacing="0" width="100%" class="table table-striped table-bordered table-hover table-sm">
                   <thead>
                     <tr>
                       <th>Clave</th>
-                      <th>Región</th>
-                      <th>Ciudad</th>
+                      <th>Fecha captura</th>
+                      <th>Costo total</th>
                       <th>Consorcio</th>
-                      <th>Nombre</th>
-                      <th>Detalles</th>
+                      <th>Tienda</th>
+                      <th class="text-center">Estado</th>
+                      <th class="text-center">Detalles</th>
+                      <th class="text-center"></th>
+                      <th class="text-center">Eliminar</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+
+                  </tbody>
+                </table>
+              </div>
+            </div>
+          </div>         
+        </div>
+      </div>
+      <div class="tab-pane fade" id="pedidosEntregados" role="tabpanel" aria-labelledby="pedidosEntregados">
+        <div class="row">
+          <div class="col-md-12">
+            <div class="card">
+              <div class="card-body">
+                <table id="tablaPedidosEntregados" cellspacing="0" width="100%" class="table table-striped table-bordered table-hover table-sm">
+                  <thead>
+                    <tr>
+                      <th>Clave</th>
+                      <th>Fecha captura</th>
+                      <th>Costo total</th>
+                      <th>Consorcio</th>
+                      <th>Tienda</th>
+                      <th class="text-center">Estado</th>
+                      <th class="text-center">Detalles</th>
                     </tr>
                   </thead>
                   <tbody>
@@ -203,7 +195,7 @@
   <script src="js/Chart.min.js"></script>
   <script src='js/decimal.min.js'></script>
   <script src="js/sweetalert.min.js"></script>
-  <script src="babel/ofertas.js"></script>
+  <script src="babel/pedidosMateriales.js"></script>
   <!-- <script src="js/estadisticasvue.js"></script> -->
 </body>
 </html>
