Terminado el módulo de pedidos de materiales

--- a/pedido.html
+++ b/pedido.html
@@ -268,8 +268,8 @@
             </form>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
-            <button id="btnActualizarProducto" onclick="agregarProducto()" type="button" class="btn btn-primary">Guardar</button>
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+            <button id="btnActualizarProducto" type="button" class="btn btn-primary">Guardar</button>
           </div>
         </div>
       </div>
@@ -287,7 +287,7 @@
             <p>¿Realmente desea eliminar este producto?</p>
           </div>
           <div class="modal-footer">
-            <button id="btnCancelar" type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
+            <button id="btnCancelar" type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
             <button id="btnConfirmar" type="button" class="btn btn-primary" data-dismiss="modal">Confirmar</button>
           </div>
         </div>
