Se le agregó el módulo de productos

--- a/ofertas.html
+++ b/ofertas.html
@@ -199,6 +199,7 @@
                                       <th>Nombre</th>
                                       <th>Precio de lista</th>
                                       <th>Precio de oferta</th>
+                                      <th class="text-center"><i class="fas fa-cog"></i></th>
                                     </tr>
                                   </thead>
                                   <tbody>
@@ -303,7 +304,7 @@
                       </table>
                     </div>
                     <div class="tab-pane fade" id="ofertasInactivas" role="tabpanel" aria-labelledby="pillofertasInactivas">
-                      <table id="tablaOfertasActivas" cellspacing="0" width="100%" class="table table-sm table-bordered table-striped table-hover">
+                      <table id="tablaOfertasInactivas" cellspacing="0" width="100%" class="table table-sm table-bordered table-striped table-hover">
                         <thead>
                           <tr>
                             <th>Id</th>
@@ -402,7 +403,7 @@
   <script src="js/localforage.min.js"></script>
   <script src="js/Chart.min.js"></script>
   <script src='js/decimal.min.js'></script>
-  <script src="js/sweetalert.min.js"></script>
+  <script src="https://unpkg.com/sweetalert2@7.20.10/dist/sweetalert2.all.js"></script>
   <script src="babel/ofertas.js"></script>
   <!-- <script src="js/estadisticasvue.js"></script> -->
 </body>
