Se limitan los pedidos a cien, se hizo que aparezca el estándar en los pedidos

--- a/panel.html
+++ b/panel.html
@@ -128,6 +128,7 @@
                           <th>Fecha de captura</th>
                           <th>Tienda</th>
                           <th>Ruta</th>
+                          <th>Estándar</th>
                           <th class="text-center">Detalles</th>
                           <th class="text-center">Estado</th>
                           <th class="text-center">Eliminar</th>
@@ -152,6 +153,7 @@
                               <th>Fecha de captura</th>
                               <th>Tienda</th>
                               <th>Ruta</th>
+                              <th>Estándar</th>
                               <th>Detalles</th>
                               <th>Estado</th>
                               <th>Eliminar</th>
@@ -160,6 +162,7 @@
                           <tbody id="tbodyTablaPedidoPadre" style="border: 2px solid grey; border-style: dashed; height:200px; width:100%;" class="tabla-drag">
                             <h4>Arrastra los pedidos dentro de las líneas punteadas para agruparlos</h4>
                             <tr id="vacio" style="padding:0px 0px 0px;" class="no-pading">
+                              <td></td>
                               <td></td>
                               <td></td>
                               <td></td>
@@ -318,6 +321,7 @@
                           <th>Fecha de captura</th>
                           <th>Tienda</th>
                           <th>Ruta</th>
+                          <th>Estándar</th>
                           <th>Detalles</th>
                         </tr>
                       </thead>
