--- a/pedidoPadre.html
+++ b/pedidoPadre.html
@@ -96,7 +96,7 @@
                             <option value="cambioFisico">Cambio físico</option>
                           </select>
                         </div>
-                      </form>
+                      </form>   
                       <br>
                       <div class="table-responsive">
                         <table id="tableinfo" cellspacing="0" class="table-sm table-striped table-hover">
@@ -161,9 +161,10 @@
                           </select>
                         </div>
                       </form>
+                      <label class="float-right">Nivel de servicio: <button id="nivelServicio" type="button" class="btn btn-agente"></button></label>
                       <br>
                       <div class="table-responsive">
-                        <table id="tablaPedidosChecados" class="table table-condensed table-hover table-striped table-bordered">
+                        <table id="tablaPedidosChecados" class="table table-sm table-hover table-striped table-bordered">
                           <thead>
                             <tr>
                               <th>Clave</th>
@@ -172,6 +173,7 @@
                               <th>Kg</th>
                               <th>Pz Ent.</th>
                               <th>Kg Ent.</th>
+                              <th>Nivel de servicio</th>
                             </tr>
                           </thead>
                           <tbody>
